hphp/hack/test/typecheck/dynamic/coercion/unresolved.php.exp
File "unresolved.php", line 9, characters 7-16:
You are trying to access the member someMethod but this is not an object, it is an int (Typing[4062])
File "unresolved.php", line 5, characters 10-10:
Definition is here
